Fixed some things